cargo_check_final_universal_3.log
warning: /app/crates/auth-platform/Cargo.toml: file `/app/crates/auth-platform/src/lib.rs` found to be present in multiple build targets:
  * `lib` target `auth_platform`
  * `integration-test` target `lib`
    Checking auth-core v0.1.0 (/app/crates/auth-core)
warning: unused imports: `Serialize` and `de::DeserializeOwned`
 --> crates/auth-cache/src/lib.rs:4:13
  |
4 | use serde::{de::DeserializeOwned, Serialize};
  |             ^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: `auth-cache` (lib) generated 1 warning (run `cargo fix --lib -p auth-cache` to apply 1 suggestion)
    Checking auth-protocols v0.1.0 (/app/crates/auth-protocols)
    Checking auth-extension v0.1.0 (/app/crates/auth-extension)
    Checking auth-db v0.1.0 (/app/crates/auth-db)
    Checking auth-audit v0.1.0 (/app/crates/auth-audit)
error[E0432]: unresolved import `auth_core::services::RefreshTokenStore`
   --> crates/auth-db/src/repositories/refresh_token_repository.rs:319:5
    |
319 | use auth_core::services::RefreshTokenStore;
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `RefreshTokenStore` in `services`
    |
help: consider importing this trait instead
    |
319 - use auth_core::services::RefreshTokenStore;
319 + use auth_core::prelude::token_service::RefreshTokenStore;
    |

error[E0432]: unresolved import `auth_core::services::RevokedTokenStore`
   --> crates/auth-db/src/repositories/revoked_token_repository.rs:258:5
    |
258 | use auth_core::services::RevokedTokenStore;
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `RevokedTokenStore` in `services`
    |
help: consider importing this trait instead
    |
258 - use auth_core::services::RevokedTokenStore;
258 + use auth_core::prelude::token_service::RevokedTokenStore;
    |

For more information about this error, try `rustc --explain E0432`.
error: could not compile `auth-db` (lib) due to 2 previous errors
